<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idInicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button_background"
    tools:context=".Ingreso">

    <!--Logo de la Universidad -->
    <ImageView
        android:id="@+id/idL1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/diseno_ingreso"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logougb" />

    <!--Título de ingreso de usuario -->
    <TextView
        android:id="@+id/idTituloIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/TituloIngreso"
        android:textColor="#0000FF"
        android:textColorHighlight="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <!--Ingresar correo -->
    <TextView
        android:id="@+id/idCorreoIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/correo"
        android:textColor="#0000FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTituloIngreso"
        app:layout_constraintVertical_bias="0.104" />

    <!--Caja para ingresar correo -->
    <EditText
        android:id="@+id/idCorreoIng"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/diseno_ingreso"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/cajacorreo"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCorreoIngreso"
        app:layout_constraintVertical_bias="0.03" />

    <!--Ingresar contraseña -->
    <TextView
        android:id="@+id/idPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/password"
        android:textColor="#0000FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCorreoIng"
        app:layout_constraintVertical_bias="0.141" />

    <!--Caja para ingresar contraseña -->
    <EditText
        android:id="@+id/idPassSegura"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/diseno_ingreso"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/cajapassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPass"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="TextContrastCheck" />

    <!--Botón Ingresar -->
    <Button
        android:id="@+id/idBtnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:fontFamily="serif"
        android:text="@string/btnIngresar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassSegura"
        app:layout_constraintVertical_bias="0.108" />

    <!--Pregunta -->
    <TextView
        android:id="@+id/idPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/pregunta"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnIngresar"
        app:layout_constraintVertical_bias="0.096" />

    <!--Botón de redirección a formulario Registro -->
    <Button
        android:id="@+id/idBRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FEFEFE"
        android:fontFamily="serif"
        android:text="@string/Regi"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPregunta"
        app:layout_constraintVertical_bias="0.136" />

</androidx.constraintlayout.widget.ConstraintLayout>